--- a/css/font.scss
+++ b/css/font.scss
@@ -42,40 +42,40 @@
   font-style:normal;
   font-display:auto;
   font-weight:300;
-  src:url(../font/SpoqaHanSansNeo-Light.eot);
-  src:url(../font/SpoqaHanSansNeo-Light.eot?#iefix) format('embedded-opentype'),
-  url(../font/SpoqaHanSansNeo-Light.woff) format('woff'),
-  url(../font/SpoqaHanSansNeo-Light.ttf) format('truetype');
+  src:url(/font/SpoqaHanSansNeo-Light.eot);
+  src:url(/font/SpoqaHanSansNeo-Light.eot?#iefix) format('embedded-opentype'),
+  url(/font/SpoqaHanSansNeo-Light.woff) format('woff'),
+  url(/font/SpoqaHanSansNeo-Light.ttf) format('truetype');
 }
 @font-face {
   font-family:'Spoqa Han Sans Neo';
   font-style:normal;
   font-display:auto;
   font-weight:400;
-  src:url(../font/SpoqaHanSansNeo-Regular.eot);
-  src:url(../font/SpoqaHanSansNeo-Regular.eot?#iefix) format('embedded-opentype'),
-  url(../font/SpoqaHanSansNeo-Regular.woff) format('woff'),
-  url(../font/SpoqaHanSansNeo-Regular.ttf) format('truetype');
+  src:url(/font/SpoqaHanSansNeo-Regular.eot);
+  src:url(/font/SpoqaHanSansNeo-Regular.eot?#iefix) format('embedded-opentype'),
+  url(/font/SpoqaHanSansNeo-Regular.woff) format('woff'),
+  url(/font/SpoqaHanSansNeo-Regular.ttf) format('truetype');
 }
 @font-face {
   font-family:'Spoqa Han Sans Neo';
   font-style:normal;
   font-display:auto;
   font-weight:500;
-  src:url(../font/SpoqaHanSansNeo-Medium.eot);
-  src:url(../font/SpoqaHanSansNeo-Medium.eot?#iefix) format('embedded-opentype'),
-  url(../font/SpoqaHanSansNeo-Medium.woff) format('woff'),
-  url(../font/SpoqaHanSansNeo-Medium.ttf) format('truetype');
+  src:url(/font/SpoqaHanSansNeo-Medium.eot);
+  src:url(/font/SpoqaHanSansNeo-Medium.eot?#iefix) format('embedded-opentype'),
+  url(/font/SpoqaHanSansNeo-Medium.woff) format('woff'),
+  url(/font/SpoqaHanSansNeo-Medium.ttf) format('truetype');
 }
 @font-face {
   font-family:'Spoqa Han Sans Neo';
   font-style:normal;
   font-display:auto;
   font-weight:700;
-  src:url(../font/SpoqaHanSansNeo-Bold.eot);
-  src:url(../font/SpoqaHanSansNeo-Bold.eot?#iefix) format('embedded-opentype'),
-  url(../font/SpoqaHanSansNeo-Bold.woff) format('woff'),
-  url(../font/SpoqaHanSansNeo-Bold.ttf) format('truetype');
+  src:url(/font/SpoqaHanSansNeo-Bold.eot);
+  src:url(/font/SpoqaHanSansNeo-Bold.eot?#iefix) format('embedded-opentype'),
+  url(/font/SpoqaHanSansNeo-Bold.woff) format('woff'),
+  url(/font/SpoqaHanSansNeo-Bold.ttf) format('truetype');
 }
 .tk-arboria { font-family: "arboria",sans-serif; }
 
